v0.10.0 --- 2014-05-20
======================

Additions:
 + Experimental way of clearing the engine using GooRunner.prototype.clear
 + Examples are linked to from jsdocs

Fixes:
 * fix in Quaternion.prototype.fromVectorToVector

Deprecated:
 -

Breaking changes:
 * All debug related classes are relocated in the debugpack (MarkerComponent, CameraDebug, LightDebug, MeshRendererDebug, SkeletonDebug, CameraDebugSystem, DebugRenderSystem, LightDebugSystem, MarkerSystem, BoundingVolumeMeshBuilder, DebugDrawHelper, Debugger, EntityCounter, FrustumViewer, LightPointer)
 * New wave scripts (src/goo/scripts/newwave) are relocated to the parent folder, replacing some of the older scripts. The old FPCamControlScript, FlyControlScript, OrbitCamControlScript, OrbitNPanControlScript, MouseLookControlScript and WASDControlScript are thus replaced with new style scripts and are not backwards-compatible.
 - EntityUtils.createTypicalEntity has been removed as scheduled; use world.createEntity instead
 - EntityUtils.traverse has been removed as scheduled; use entity.traverse instead
 - ShapeCreator has been removed as scheduled; use new Box/Sphere/Quad... instead

v.0.9.10 --- 2014-05-14
=======================

Additions:
 + added experimental .clear on GooRunner, World and SystemBus

Fixes:
 * fixed video looping bug
 * made sure projects loads even if sound decoding fails

v0.9.9 --- 2014-05-06
=====================

Additions:
 + added a way to preload textures to the GPU gradually, without freezing up the browser
 + added a way to precompile shaders gradually, without freezing up the browser
 + added World.prototype.processEntityChanges that only processes add/changed/removed entities and does not call the systems for an update

Fixes:
 * fixed a picking bug
 * fixed an infinite loop in the DynamicLoader
 * fixed several performance issues in the DynamicLoader

Changes:
 * Camera.prototype.getWorldCoordinates now uses the correct Y direction of screen coordinates
